handy.txt
[ 99%] Building CXX object src/example/CMakeFiles/mpsi.dir/multipartypsi.cpp.o
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:277:66: error: ‘bool run_query(int, int, int, bool, const std::string&, int)’ redeclared as different kind of entity
  277 |                const std::string& server_address, int server_port) {
      |                                                                  ^
In file included from /home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:4:
/home/ic/Desktop/moreSecyan/src/example/TPCH.h:41:7: note: previous declaration ‘using run_query = void(enum DataSize, bool)’
   41 | using run_query = void(DataSize, bool);
      |       ^~~~~~~~~
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp: In lambda function:
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:347:60: error: expression list treated as compound expression in functional cast [-fpermissive]
  347 |                                 server_address, server_port);
      |                                                            ^
/home/ic/Desktop/moreSecyan/src/example/multipartypsi.cpp:346:24: error: invalid cast to function type ‘run_query’ {aka ‘void(DataSize, bool)’}
  346 |         bool success = run_query(role, query_type, data_size, result_protection,
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  347 |                                 server_address, server_port);
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [src/example/CMakeFiles/mpsi.dir/build.make:76: src/example/CMakeFiles/mpsi.dir/multipartypsi.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:833: src/example/CMakeFiles/mpsi.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
Web目录路径: /home/ic/Desktop/moreSecyan/Release/src/example/web
Web服务器启动在 http://localhost:8080
Error running query: rt error at /home/ic/Desktop/moreSecyan/extern/libOTe/cryptoTools/cryptoTools/Network/Session.cpp:54
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
Error running query: rt error at /home/ic/Desktop/moreSecyan/extern/libOTe/cryptoTools/cryptoTools/Network/Session.cpp:54
Error running query: rt error at /home/ic/Desktop/moreSecyan/extern/libOTe/cryptoTools/cryptoTools/Network/Session.cpp:54
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).
client socket connect error (hangs).

/usr/bin/ld: CMakeFiles/mpsi.dir/multipartypsi.cpp.o: in function `__static_initialization_and_destruction_0()':
multipartypsi.cpp:(.text+0x1272): undefined reference to `run_Q3_m(DataSize, bool, bool, bool)'
/usr/bin/ld: multipartypsi.cpp:(.text+0x1288): undefined reference to `run_Q10_m(DataSize, bool, bool, bool)'
/usr/bin/ld: multipartypsi.cpp:(.text+0x129e): undefined reference to `run_Q18_m(DataSize, bool, bool, bool)'
/usr/bin/ld: multipartypsi.cpp:(.text+0x12b4): undefined reference to `run_Q8_m(DataSize, bool, bool, bool)'
/usr/bin/ld: multipartypsi.cpp:(.text+0x12ca): undefined reference to `run_Q9_m(DataSize, bool, bool, bool)'
collect2: error: ld returned 1 exit status
make[2]: *** [src/example/CMakeFiles/mpsi.dir/build.make:113: src/example/mpsi] Error 1
make[1]: *** [CMakeFiles/Makefile2:833: src/example/CMakeFiles/mpsi.dir/all] Error 2
make: *** [Makefile:136: all] Error 2


Server: Sending 33 tuples
Server: First few values being sent: 1092 19950304 48 1830 19950223 

Client: Received 750 tuples
Client: First few values received: 4294967297 4294967297 4294967297 4294967297 4294967297 
Client: Local filtered tuples size: 33
Client: First few local values: 1092 19950304 48 1830 19950223 
Result verification failed! Dual Execution relations would have different structures.
Client filtered relation size: 33
Server filtered relation size: 750


